[package]
name = "psm_clinical_code_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = { version = "1.0", features = ["derive"]}
wasm-bindgen-futures = "0.4"
reqwasm = "0.4.0"
